--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ toml = "0.8.19"
 
 [dev-dependencies]
 insta = { version = "1.41.1", features = ["json", "toml"] }
+
+[lints.clippy]
+unwrap_used = "deny"
+
