--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,6 +18,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: clippy
+      run: cargo clippy --verbose
     - name: Build
       run: cargo build --verbose
     - name: Run tests
