--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,16 @@ readme = "README.md"
 exclude = ["test/"]
 
 [dependencies]
+derive_more = { version = "1.0.0", features = ["as_ref", "deref", "display", "from", "into_iterator"] }
 nom = "7.1.3"
 serde = { version = "1.0.215", features = ["derive", "rc"] }
 strum = { version = "0.26.3", features = ["derive"] }
 thiserror = "2.0.3"
 toml = "0.8.19"
+tracing = "0.1.41"
 
 [dev-dependencies]
-insta = { version = "1.41.1", features = ["json", "toml"] }
+insta = { version = "1.41.1", features = ["json", "redactions", "toml"] }
 
 [lints.clippy]
 allow_attributes_without_reason = "deny"
